tools/shook/src/snapshots/shook__config__tests__test_invalid_config-server_port.snap
---
source: src/config.rs
expression: err.description()
---
TOML parse error at line 2, column 8
  |
2 | port = 100000
  |        ^^^^^^
invalid value: integer `100000`, expected u16
